# slurm-monitor

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  continuous-delivery.yml  squash_and_merge_changelog.yaml  test-installs.yml
.github/workflows/continuous-delivery/: verify-upstream.sh
dev/: pyproject_check_dependencies.py  pyproject_sync_dependencies.py
docs/: conf.py  index.rst  rtd_build.sh
src/slurm_monitor/dashboards/: slurm.py
src/slurm_monitor/pipelines/slurm/: dlt_sources.py
src/slurm_monitoring/: cli.py  logging.py
src/slurm_monitoring/dashboards/: slurm.py
src/slurm_monitoring/pipelines/: github.py
src/slurm_monitoring/pipelines/slurm/: base.py  dlt_sources.py  generated.py  local.py  remote.py
